Skill icons alignment fixed

--- a/src/app/core/home/skill/skill.component.css
+++ b/src/app/core/home/skill/skill.component.css
@@ -1,9 +1,6 @@
 .skill{
   padding: 0% 3% 0% 10%;
 }
-.names{
-  /* border-bottom: 3px solid #09457F; */
-}
 .icon{
   font-size: 22px;
   margin-right: 8%;
